weather/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: weather
spec:
  selector:
    app: weather
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
